// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given component is rendered with a single steps and labels disabled should match the snapshot 1`] = `
<div
  className="w-full "
  data-testid="progressbar"
>
  <div
    className="relative"
  >
    <div
      aria-label="Test"
      aria-valuenow={0}
      className="w-full h-[5px] bg-colour-primary-container dark:bg-colour-primary-container-dark"
      role="progressbar"
    >
      <div
        className="h-full transition-all bg-colour-primary dark:bg-colour-primary-dark duration-150"
        style={
          {
            "width": "0%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`given component is rendered with three total steps and labels disabled should match the snapshot 1`] = `
<div
  className="w-full "
  data-testid="progressbar"
>
  <div
    className="relative"
  >
    <div
      aria-label="Test"
      aria-valuenow={0}
      className="w-full h-[5px] bg-colour-primary-container dark:bg-colour-primary-container-dark"
      role="progressbar"
    >
      <div
        className="h-full transition-all bg-colour-primary dark:bg-colour-primary-dark duration-300"
        style={
          {
            "width": "0%",
          }
        }
      />
    </div>
  </div>
</div>
`;
